--- a/package.json
+++ b/package.json
@@ -46,6 +46,12 @@
     "webpack": "^2.6.1"
   },
   "devDependencies": {
+    "babel-eslint": "^7.2.3",
+    "eslint": "3.19.0",
+    "eslint-config-airbnb": "^15.0.1",
+    "eslint-plugin-import": "^2.3.0",
+    "eslint-plugin-jsx-a11y": "^5.0.3",
+    "eslint-plugin-react": "^7.1.0",
     "webpack-dev-server": "^2.4.5"
   },
   "keywords": [
