Add eslint script

--- a/package.json
+++ b/package.json
@@ -60,8 +60,9 @@
     "react"
   ],
   "license": "MIT",
-  "main": "src/entry.js",
+  "main": "src/index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "echo \"Error: no test specified\" && exit 1",
+    "eslint": "eslint src --ext=jsx --ext=js"
   }
 }
