--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -1,9 +1,14 @@
  version: 2
  jobs:
    build:
-     working_directory: ~/src
+     working_directory: ~/gisida
      docker:
        - image: circleci/node:6.10.3
      steps:
        - checkout
-       - run: echo "Sample config test"
+       - run: 
+           name: Install Dependancies
+           command: yarn install
+       - run: 
+           name: Run ESLint
+           command: npm run lint
