--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "author": "Ona Systems Inc.",
   "repository": {
     "type": "git",
-    "url": ""
+    "url": "https://github.com/onaio/gisida#gisida"
   },
   "dependencies": {
     "babel-core": "^5.8.38",
@@ -63,6 +63,6 @@
   "main": "src/index.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "eslint": "eslint src --ext=jsx --ext=js"
+    "lint": "eslint src --ext=jsx --ext=js"
   }
 }
