--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -7,7 +7,7 @@
      steps:
        - checkout
        - run: 
-           name: Install Dependancies
+           name: Install Dependencies
            command: yarn install
        - run: 
            name: Run ESLint
