--- a/.eslintrc
+++ b/.eslintrc
@@ -15,7 +15,16 @@
         "react"
     ],
     "rules": {
-
+        "jsx-a11y/anchor-has-content":0,
+        "jsx-a11y/href-no-hash": 0,
+        "jsx-a11y/no-autofocus":0,
+        "no-mixed-operators": 0,
+        "no-nested-ternary": 0,
+        "react/react-in-jsx-scope": 0,
+        "react/prop-types": 0
     },
-    "parser": "babel-eslint"
+    "parser": "babel-eslint",
+    "globals": {
+        "$": true
+    }
 }
