--- a/.eslintrc
+++ b/.eslintrc
@@ -15,12 +15,22 @@
         "react"
     ],
     "rules": {
-        "jsx-a11y/anchor-has-content":0,
+        "jsx-a11y/anchor-has-content": 0,
         "jsx-a11y/href-no-hash": 0,
-        "jsx-a11y/no-autofocus":0,
+        "jsx-a11y/no-autofocus": 0,
         "no-mixed-operators": 0,
         "no-nested-ternary": 0,
-        "react/react-in-jsx-scope": 0
+        "react/react-in-jsx-scope": 0,
+        "no-param-reassign": [
+            2,
+            {
+                "props": true,
+                "ignorePropertyModificationsFor": [
+                    "layer",
+                    "layerData"
+                ]
+            }
+        ]
     },
     "parser": "babel-eslint",
     "globals": {
