--- a/package.json
+++ b/package.json
@@ -13,8 +13,8 @@
     }
   },
   "dependencies": {
-    "babel-core": "^5.8.38",
-    "babel-loader": "^5.4.2",
+    "babel-core": "v6.25.0",
+    "babel-loader": "v6.4.1",
     "babel-preset-es2015": "^6.24.0",
     "babel-preset-react": "^6.24.1",
     "bootstrap-loader": "^2.0.0",
