--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "babel-core": "v6.25.0",
     "babel-loader": "v6.4.1",
     "babel-preset-es2015": "^6.24.0",
+    "babel-preset-es2016": "^6.24.1",
     "babel-preset-react": "^6.24.1",
     "bootstrap-loader": "^2.0.0",
     "bootstrap-sass": "^3.3.7",
