--- a/package.json
+++ b/package.json
@@ -42,6 +42,7 @@
     "node-libs-browser": "^0.5.0",
     "node-sass": "^4.5.1",
     "node-uuid": "^1.4.8",
+    "prop-types": "^15.5.10",
     "react": "^15.3.2",
     "react-dom": "^15.3.2",
     "react-hot-loader": "^1.3.0",
