--- a/package.json
+++ b/package.json
@@ -32,6 +32,7 @@
     "jquery": "^3.2.1",
     "js-cookie": "^2.1.4",
     "jsx-loader": "^0.13.2",
+    "mustache": "^2.3.0",
     "node-libs-browser": "^0.5.0",
     "node-sass": "^4.5.1",
     "node-uuid": "^1.4.8",
