Add settlements circle layer

--- a/.eslintrc
+++ b/.eslintrc
@@ -31,7 +31,8 @@
                     "layerData",
                     "layerProp",
                     "row",
-                    "obj"
+                    "obj",
+                    "data"
                 ]
             }
         ]
