--- a/package.json
+++ b/package.json
@@ -17,7 +17,6 @@
     "babel-loader": "v6.4.1",
     "babel-preset-es2015": "^6.24.0",
     "babel-preset-es2016": "^6.24.1",
-    "babel-preset-react": "^6.24.1",
     "babel-preset-stage-0": "^6.24.1",
     "bootstrap-loader": "^2.0.0",
     "bootstrap-sass": "^3.3.7",
@@ -40,6 +39,7 @@
     "jsx-loader": "^0.13.2",
     "mapbox-gl": "^0.40.1",
     "mapbox-gl-draw": "^0.16.0",
+    "milia-wrapper": "^0.0.4",
     "mustache": "^2.3.0",
     "redux": "^3.7.2",
     "simple-statistics": "^5.0.1",
@@ -52,13 +52,13 @@
     "eslint-config-airbnb": "^16.1.0",
     "eslint-plugin-import": "^2.7.0",
     "eslint-plugin-jsx-a11y": "^6.0.2",
+    "eslint-plugin-react": "^7.5.1",
     "stylelint": "^8.0.0",
     "stylelint-config-standard": "^17.0.0"
   },
   "keywords": [
     "mapboxgl",
-    "mapping",
-    "react"
+    "mapping"
   ],
   "license": "MIT",
   "main": "dist/gisida.js",
