--- a/package.json
+++ b/package.json
@@ -37,12 +37,13 @@
     "jquery": "^3.2.1",
     "js-cookie": "^2.1.4",
     "jsx-loader": "^0.13.2",
-    "mapbox-gl": "^0.40.1",
+    "mapbox-gl": "^0.42.2",
     "mapbox-gl-draw": "^0.16.0",
     "milia-wrapper": "^0.0.4",
     "mustache": "^2.3.0",
+    "papaparse": "^4.3.6",
     "redux": "^3.7.2",
-    "simple-statistics": "^5.0.1",
+    "simple-statistics": "^5.2.0",
     "webpack": "^3.8.1"
   },
   "devDependencies": {
