--- a/.eslintrc
+++ b/.eslintrc
@@ -13,5 +13,9 @@
   "rules": {
     
   },
-  "parser": "babel-eslint"
+  "parser": "babel-eslint",
+  "globals": {
+    "mapboxgl": true,
+    "$": false
+  }
 }
