--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "mustache": "^2.3.0",
     "papaparse": "^4.3.6",
     "redux": "^3.7.2",
+    "redux-thunk": "^2.2.0",
     "simple-statistics": "^5.2.0",
     "webpack": "^3.8.1"
   },
