Fix addChart and chart popups

--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "babel-preset-es2016": "^6.24.1",
     "babel-preset-stage-0": "^6.24.1",
     "colorbrewer": "^1.0.0",
+    "highcharts": "^6.0.4",
     "jsx-loader": "^0.13.2",
     "mustache": "^2.3.0",
     "papaparse": "^4.3.6",
