--- a/package.json
+++ b/package.json
@@ -14,7 +14,7 @@
   },
   "dependencies": {
     "babel-core": "v6.25.0",
-    "babel-loader": "v6.4.1",
+    "babel-loader": "^7.1.2",
     "babel-preset-es2015": "^6.24.0",
     "babel-preset-es2016": "^6.24.1",
     "babel-preset-stage-0": "^6.24.1",
@@ -45,7 +45,7 @@
     "mapspec"
   ],
   "license": "MIT",
-  "main": "dist/gisida.js",
+  "main": "build/gisida.js",
   "scripts": {
     "lint": "eslint src --ext=jsx --ext=js",
     "fix": "eslint src --ext=jsx --ext=js --fix",
