--- a/package.json
+++ b/package.json
@@ -21,11 +21,7 @@
     "fix": "eslint src --ext=jsx --ext=js --fix",
     "lint": "eslint src --ext=jsx --ext=js"
   },
-  "jest": {
-    "transform": {
-      ".*": "./node_modules/jest-css-modules"
-    }
-  },
+  "jest": {},
   "dependencies": {
     "babel-core": "v6.25.0",
     "babel-loader": "^7.1.2",
@@ -46,10 +42,12 @@
   },
   "devDependencies": {
     "babel-eslint": "^8.1.2",
+    "babel-jest": "^22.4.1",
     "eslint": "^4.14.0",
     "eslint-config-airbnb": "^16.1.0",
     "eslint-plugin-import": "^2.8.0",
     "eslint-plugin-jsx-a11y": "^6.0.3",
-    "eslint-plugin-react": "^7.5.1"
+    "eslint-plugin-react": "^7.5.1",
+    "jest": "^22.4.2"
   }
 }
