--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -15,19 +15,19 @@ jobs:
       - run: 
           name: Run jest
           command: npm test
-publish:
-  docker:
-    - image: circleci/<language>:<version TAG>
-  steps:
-    - checkout
-    - run: echo "//registry.npmjs.org/:_authToken=$NPM_TOKEN" >> ~/.npmrc
-    - run: npm publish
+  publish:
+    docker:
+      - image: circleci/node:6.10.3
+    steps:
+      - checkout
+      - run: echo "//registry.npmjs.org/:_authToken=$NPM_TOKEN" >> ~/.npmrc
+      - run: npm publish
 workflows:
-version: 2
-tagged-build:
-  jobs:
-    - publish:
-        filters:
-          tags:
-            only: /v[0-9]+(\.[0-9]+)*/
+  version: 2
+  tagged-build:
+    jobs:
+      - publish:
+          filters:
+            tags:
+              only: /v[0-9]+(\.[0-9]+)*/
   
