Add ls to inspect

--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -23,6 +23,7 @@ jobs:
       - run: echo "//registry.npmjs.org/:_authToken=$NPM_TOKEN" >> ~/.npmrc
       - run: yarn install
       - run: yarn build
+      - run: ls -la
       - run: npm publish
 workflows:
   version: 2
