--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -30,6 +30,8 @@ workflows:
     jobs:
       - publish:
           filters:
+           branches:
+              only: master
             tags:
               only: /v[0-9]+(\.[0-9]+)*/
   
