Switch to run job for only version branch

--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -31,7 +31,7 @@ workflows:
       - publish:
           filters:
            branches:
-              only: master
+              only: /[0-9]+(\.[0-9]+)*/
             tags:
               only: /v[0-9]+(\.[0-9]+)*/
   
