--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "gisida",
-  "version": "v1.0.0-rc1",
+  "version": "1.0.0",
   "description": "A dashboard builder library for map visualizations",
   "keywords": [
     "data visualization",
