--- a/package.json
+++ b/package.json
@@ -52,6 +52,7 @@
     "eslint-plugin-react": "^7.5.1",
     "jest": "^22.4.3",
     "mapbox-gl": "^0.44.1",
-    "mock-browser": "^0.92.14"
+    "mock-browser": "^0.92.14",
+    "webpack-cli": "^3.1.0"
   }
 }
