--- a/package.json
+++ b/package.json
@@ -32,6 +32,7 @@
     "colorbrewer": "^1.0.0",
     "d3": "^4.13.0",
     "highcharts": "^6.0.4",
+    "history": "^4.7.2",
     "js-cookie": "^2.2.0",
     "jsx-loader": "^0.13.2",
     "moment": "^2.22.1",
