--- a/package.json
+++ b/package.json
@@ -34,6 +34,7 @@
     "highcharts": "^6.0.4",
     "js-cookie": "^2.2.0",
     "jsx-loader": "^0.13.2",
+    "lodash.clonedeep": "^4.5.0",
     "moment": "^2.22.1",
     "mustache": "^2.3.0",
     "papaparse": "^4.3.6",
