--- a/package.json
+++ b/package.json
@@ -41,6 +41,7 @@
     "redux": "^3.7.2",
     "redux-thunk": "^2.2.0",
     "simple-statistics": "^5.2.0",
+    "uglifyjs-webpack-plugin": "1.1.5",
     "webpack": "^3.8.1"
   },
   "devDependencies": {
