--- a/package.json
+++ b/package.json
@@ -22,7 +22,10 @@
     "lint": "eslint src --ext=jsx --ext=js",
     "test": "jest"
   },
-  "jest": {},
+  "jest": {
+    "verbose": true,
+    "testURL": "http://localhost/"
+  },
   "dependencies": {
     "babel-core": "v6.25.0",
     "babel-loader": "^7.1.2",
