--- a/package.json
+++ b/package.json
@@ -38,6 +38,7 @@
     "js-cookie": "^2.2.0",
     "jsx-loader": "^0.13.2",
     "lodash.clonedeep": "^4.5.0",
+    "lodash.omit": "^4.5.0",
     "moment": "^2.22.1",
     "mustache": "^2.3.0",
     "neo-async": "^2.5.1",
