Update to Apache 2 License
For #270

--- a/package.json
+++ b/package.json
@@ -8,7 +8,7 @@
     "maps",
     "mapspec"
   ],
-  "license": "MIT",
+  "license": "Apache-2.0",
   "author": "Ona Systems Inc.",
   "main": "build/gisida.js",
   "repository": {
