Install husky, lint-staged, and prettier

--- a/package.json
+++ b/package.json
@@ -57,9 +57,12 @@
     "eslint-plugin-import": "^2.8.0",
     "eslint-plugin-jsx-a11y": "^6.0.3",
     "eslint-plugin-react": "^7.5.1",
+    "husky": "^1.3.1",
     "jest": "^22.4.3",
+    "lint-staged": "^8.1.5",
     "mapbox-gl": "^0.44.1",
     "mock-browser": "^0.92.14",
+    "prettier": "^1.16.4",
     "webpack-cli": "^3.1.0"
   }
 }
