--- a/package.json
+++ b/package.json
@@ -53,8 +53,6 @@
     "babel-core": "v6.25.0",
     "babel-loader": "^7.1.2",
     "babel-polyfill": "^6.26.0",
-    "babel-preset-es2015": "^6.24.0",
-    "babel-preset-es2016": "^6.24.1",
     "babel-preset-stage-0": "^6.24.1",
     "colorbrewer": "^1.0.0",
     "d3": "^4.13.0",
@@ -76,6 +74,7 @@
   "devDependencies": {
     "babel-eslint": "^8.1.2",
     "babel-jest": "^22.4.1",
+    "babel-preset-env": "^1.7.0",
     "eslint": "^4.14.0",
     "eslint-config-airbnb": "^16.1.0",
     "eslint-plugin-import": "^2.8.0",
