Enable eslint to ignore test folder
Signed-off-by: Kipchirchir Sigei <arapgodsmack@gmail.com>

--- a/.eslintrc
+++ b/.eslintrc
@@ -20,6 +20,14 @@
   "plugins": [
     "jest"
 ],
+"overrides": [
+  {
+    "files": ["test/*"],
+    "rules": {
+      "require-jsdoc": "off"
+    }
+  }
+],
   "parser": "babel-eslint",
   "globals": {
     "mapboxgl": true,
