--- a/.eslintrc
+++ b/.eslintrc
@@ -1,8 +1,9 @@
 {
   "env": {
-    "browser": true
+    "browser": true,
+    "jest": true
   },
-  "extends": "airbnb",
+  "extends": ["airbnb", "prettier"],
   "parserOptions": {
     "ecmaFeatures": {
       "experimentalObjectRestSpread": true,
@@ -10,8 +11,9 @@
     },
     "sourceType": "module"
   },
+  "plugins": ["prettier"],
   "rules": {
-    
+    "prettier/prettier": "error"
   },
   "parser": "babel-eslint",
   "globals": {
