--- a/package.json
+++ b/package.json
@@ -77,8 +77,10 @@
     "babel-preset-env": "^1.7.0",
     "eslint": "^4.14.0",
     "eslint-config-airbnb": "^16.1.0",
+    "eslint-config-prettier": "^6.3.0",
     "eslint-plugin-import": "^2.8.0",
     "eslint-plugin-jsx-a11y": "^6.0.3",
+    "eslint-plugin-prettier": "^3.1.1",
     "eslint-plugin-react": "^7.5.1",
     "husky": "^1.3.1",
     "jest": "^22.4.3",
