Add more test branches for reducer activeLayerIdReducer

--- a/package.json
+++ b/package.json
@@ -58,7 +58,8 @@
       "!**/serviceWorker.js",
       "!**/index.js",
       "!**/test/**",
-      "!**/build/**"
+      "!**/build/**",
+      "!**/tests/**"
     ]
   },
   "dependencies": {
