--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -16,7 +16,7 @@ jobs:
   build:
     working_directory: ~/gisida
     docker:
-      - image: circleci/node:8.10.0
+      - image: circleci/node:6.11.5
     steps:
       - checkout
       - run:
@@ -27,10 +27,10 @@ jobs:
           command: npm run lint
       - run:
           name: Run jest
-          command: yarn test
+          command: npm test
   publish:
     docker:
-      - image: circleci/node:8.10.0
+      - image: circleci/node:6.11.5
     steps:
       - early_return_for_forked_pull_requests
       - checkout
