--- a/package.json
+++ b/package.json
@@ -59,7 +59,8 @@
       "!**/serviceWorker.js",
       "!**/index.js",
       "!**/test/**",
-      "!**/build/**"
+      "!**/build/**",
+      "!**/tests/**"
     ]
   },
   "dependencies": {
