--- a/.eslintrc
+++ b/.eslintrc
@@ -1,8 +1,9 @@
 {
   "env": {
-    "browser": true
+    "browser": true,
+    "jest/globals": true
   },
-  "extends": "airbnb",
+  "extends": ["airbnb", "plugin:jest/recommended", "plugin:jest/style"],
   "parserOptions": {
     "ecmaFeatures": {
       "experimentalObjectRestSpread": true,
@@ -11,11 +12,17 @@
     "sourceType": "module"
   },
   "rules": {
-    
+    "jest/no-disabled-tests": "warn",
+    "jest/no-focused-tests": "error",
+    "jest/no-identical-title": "error",
+    "jest/prefer-to-have-length": "warn",
+    "jest/valid-expect": "error"
   },
   "parser": "babel-eslint",
   "globals": {
     "mapboxgl": true,
     "$": false
-  }
+  },
+  "plugins": ["jest"]
+
 }
