--- a/package.json
+++ b/package.json
@@ -75,9 +75,10 @@
     "babel-eslint": "^8.1.2",
     "babel-jest": "^22.4.1",
     "babel-preset-env": "^1.7.0",
-    "eslint": "^4.14.0",
+    "eslint": "^6.8.0",
     "eslint-config-airbnb": "^16.1.0",
     "eslint-plugin-import": "^2.8.0",
+    "eslint-plugin-jest": "^23.6.0",
     "eslint-plugin-jsx-a11y": "^6.0.3",
     "eslint-plugin-react": "^7.5.1",
     "husky": "^1.3.1",
