--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "gisida",
-  "version": "1.3.1",
+  "version": "1.3.2-rc1",
   "description": "A dashboard builder library for map visualizations",
   "keywords": [
     "data visualization",
