--- a/package.json
+++ b/package.json
@@ -72,6 +72,7 @@
         "babel-polyfill": "^6.26.0",
         "babel-preset-stage-0": "^6.24.1",
         "colorbrewer": "^1.0.0",
+        "coveralls": "^3.0.9",
         "d3": "^4.13.0",
         "highcharts": "^6.0.4",
         "history": "^4.9.0",
