--- a/package.json
+++ b/package.json
@@ -49,20 +49,24 @@
     "jest": {
         "verbose": true,
         "testURL": "http://localhost/",
-        "coverageReporters": [
-            "text",
-            "html"
-        ],
+        "collectCoverage": true,
+        "coverageReporters": ["json"],
         "collectCoverageFrom": [
-            "**/*.{js,jsx,ts,tsx}",
+            "src/**/*.{js,jsx,ts,tsx}",
             "!**/node_modules/**",
+            "!**/{tests,__tests__}/**",
             "!**/coverage/**",
             "!**/serviceWorker.js",
             "!**/index.js",
             "!**/test/**",
             "!**/build/**",
             "!**/tests/**"
-        ]
+        ],
+        "roots": ["src/"],
+        "moduleNameMapper": {
+            "\\.(jpg|jpeg|png|gif|eot|otf|webp|svg|ttf|woff|woff2|mp4|webm|wav|mp3|m4a|aac|oga)$": "<rootDir>/__mocks__/fileMock.js",
+            "\\.(css|less)$": "identity-obj-proxy"
+        }
     },
     "dependencies": {
         "@babel/runtime": "^7.4.3",
