--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -28,6 +28,9 @@ jobs:
       - run:
           name: Run test with coverage for the packages
           command: yarn test  --verbose --coverage=true --forceExit
+      - run:
+          name: Upload coverage Report to Coveralls
+          command: cat coverage/sample.cov |  node_modules/coveralls/bin/coveralls.js
       - store_artifacts:
           path: coverage
   publish:
