--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -27,7 +27,7 @@ jobs:
           command: npm run lint
       - run:
           name: Run test with coverage for the packages
-          command: yarn test  --verbose --coverage=true --forceExit
+          command: yarn test  --verbose --coverage=true  --coverageReporters=text-lcov > coverage/sample.cov --forceExit
       - run:
           name: Upload coverage Report to Coveralls
           command: cat coverage/sample.cov |  node_modules/coveralls/bin/coveralls.js
