--- a/package.json
+++ b/package.json
@@ -65,7 +65,7 @@
       "!**/tests/**"
     ],
     "roots": [
-      "src/"
+      "/"
     ],
     "moduleNameMapper": {
       "\\.(jpg|jpeg|png|gif|eot|otf|webp|svg|ttf|woff|woff2|mp4|webm|wav|mp3|m4a|aac|oga)$": "<rootDir>/__mocks__/fileMock.js",
@@ -85,6 +85,8 @@
     "highcharts": "^6.0.4",
     "history": "^4.9.0",
     "i": "^0.3.6",
+    "istanbul-api": "^2.1.6",
+    "istanbul-lib-coverage": "^3.0.0",
     "js-cookie": "^2.2.0",
     "jsx-loader": "^0.13.2",
     "lodash.clonedeep": "^4.5.0",
