--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -22,6 +22,7 @@ jobs:
       - run:
           name: Install dependencies
           command: yarn install --ignore-engines
+      - run: yarn test --runInBand --verbose --coverage=true --forceExit --detectOpenHandles
       - run:
           name: Run eslint
           command: npm run lint 
