--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -22,7 +22,7 @@ jobs:
       - run:
           name: Install dependencies
           command: yarn install --ignore-engines
-      - run: yarn test --runInBand --verbose --coverage=true --forceExit --detectOpenHandles
+      - run: yarn test --runInBand --verbose --coverage=true --forceExit
       - run:
           name: Run eslint
           command: npm run lint 
