Remove menu group count/id
The group count/id was used for making sure that menu groups with the same name in other categories do not open if a group is toggled open or do not close if a group is closed. Since the parent name is now attached to each group, we can make use of this instead

--- a/package.json
+++ b/package.json
@@ -90,8 +90,7 @@
     "redux-thunk": "^2.2.0",
     "simple-statistics": "^5.2.0",
     "uglifyjs-webpack-plugin": "1.1.5",
-    "webpack": "^4.0.0",
-    "memoize-one": "^5.1.1"
+    "webpack": "^4.0.0"
   },
   "devDependencies": {
     "babel-eslint": "^8.1.2",
