--- a/package.json
+++ b/package.json
@@ -87,6 +87,7 @@
     "neo-async": "^2.5.1",
     "papaparse": "^4.3.6",
     "redux": "^3.7.2",
+    "redux-devtools-extension": "^2.13.8",
     "redux-thunk": "^2.2.0",
     "simple-statistics": "^5.2.0",
     "uglifyjs-webpack-plugin": "1.1.5",
