--- a/package.json
+++ b/package.json
@@ -97,6 +97,7 @@
     "babel-eslint": "^8.1.2",
     "babel-jest": "^22.4.1",
     "babel-preset-env": "^1.7.0",
+    "dotenv": "^8.2.0",
     "eslint": "^4.14.0",
     "eslint-config-airbnb": "^16.1.0",
     "eslint-config-prettier": "^6.3.0",
