--- a/package.json
+++ b/package.json
@@ -77,6 +77,7 @@
     "d3": "^4.13.0",
     "highcharts": "^6.0.4",
     "history": "^4.9.0",
+    "html2plaintext": "2.0.0",
     "i": "^0.3.6",
     "js-cookie": "^2.2.0",
     "jsx-loader": "^0.13.2",
