--- a/package.json
+++ b/package.json
@@ -80,6 +80,7 @@
     "html2plaintext": "2.0.0",
     "i": "^0.3.6",
     "js-cookie": "^2.2.0",
+    "jsdom": "9.12.0",
     "jsx-loader": "^0.13.2",
     "lodash.clonedeep": "^4.5.0",
     "lodash.omit": "^4.5.0",
