--- a/package.json
+++ b/package.json
@@ -73,6 +73,7 @@
     "babel-loader": "^7.1.2",
     "babel-polyfill": "^6.26.0",
     "babel-preset-stage-0": "^6.24.1",
+    "canvas": "^2.8.0",
     "colorbrewer": "^1.0.0",
     "d3": "^4.13.0",
     "highcharts": "^6.0.4",
@@ -80,7 +81,7 @@
     "html2plaintext": "2.0.0",
     "i": "^0.3.6",
     "js-cookie": "^2.2.0",
-    "jsdom": "9.12.0",
+    "jsdom": "15.0.0",
     "jsx-loader": "^0.13.2",
     "lodash.clonedeep": "^4.5.0",
     "lodash.omit": "^4.5.0",
@@ -116,5 +117,11 @@
     "prettier": "^1.16.4",
     "redux-mock-store": "^1.5.4",
     "webpack-cli": "^3.3.6"
+  },
+  "browser": {
+    "child_process": false,
+    "fs": false,
+    "net": false,
+    "tls": false
   }
 }
